tests/integration/snapshots/integration__parse_failure__array_empty.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[]
stdout --- 
[]
stderr --- 
<empty>
