tests/integration/snapshots/integration__parse_failure__array_many.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[1, 2, 3]
stdout --- 
[1, 2, 3]
stderr --- 
<empty>
