tests/integration/snapshots/integration__parse_failure__array_single.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[1]
stdout --- 
[1]
stderr --- 
<empty>
