tests/integration/snapshots/integration__parse_failure__array_subarrays.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
[["a"], [true, false]]
stdout --- 
[["a"], [true, false]]
stderr --- 
<empty>
