tests/integration/snapshots/integration__parse_failure__exponent_with_plus_sign.snap
---
source: tests/integration/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
429e+6
stdout --- 
429e+6
stderr --- 
<empty>
