tests/integration/snapshots/integration__parse_failure__invalid_escaped_curly.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
"\{"
stdout ---

stderr ---
error: expected escapable sequence, found `{`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:3
  |
1 | "\{"
  | --^
  | ||
  | |escape slash found here
  | opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - "\{"
1 + "{"
  |
