tests/integration/snapshots/integration__parse_failure__leading_zero_zero.snap
---
source: tests/integration/parse_failure.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
000
stderr ---
error: unexpected leading zero
 --> stdin:1:1
  |
1 | 000
  | -^^
  | |
  | first zero found here
  |
help: remove the leading zeros
  |
1 - 000
1 + 0
  |
